--- a/style.css
+++ b/style.css
@@ -1,393 +1,309 @@
 @charset "utf-8";
 
-html{
-  font-size: 100%;
-}
-
 body{
-  font-size: 1rem;
   margin: 0;
-  font-family: 'Noto Sans','Noto Sans JP';
-
 }
-
-a{
-    text-decoration: none;
-}
-
 ul{
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 img{
-  width: 100%;
-}
-
-.wrapper{
-  max-width: 1200px;
-  padding: 0 16px;
-}
-
-.readmore a{
-  position: relative;
-  display: inline-block;
-}
-
-.readmore a::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 1px;
-  background: black;
-  transition: all 200ms ease;
-}
-
-.readmore a:hover::after{
-  opacity: 0;
-  transform: translateY(3px);
+  max-width: 100%;
+  display: block;
 }
 
 /* header */
 
-header{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: white;
-    z-index: 10;
-}
-
-.header{
-  line-height: 1px;
-  margin: 0 auto;
-  padding: 20px 16px;
+#header{
   box-sizing: border-box;
-
-  img{
-    width: 145px;
-    height: 30px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 44px;
+  position: fixed;
+  background: white;
+  width: 100%;
+  z-index: 10;
 }
 
-.nav-menu{
-  background-color: rgb(41, 41, 41);
+#mask{
+  display: none;
+}
 
-  .nav-list{
-    box-sizing: border-box;
-    margin: 0 auto;
+#nav{
+  box-sizing: border-box;
+  width: 300px;
+  height: 100vh;
+  background: rgb(24, 24, 24);
+  padding: 64px 20px;
+  z-index: 20;
+  position: fixed;
+  opacity: 0;
+  display: none;
 
-    ul{
-      display: flex;
-      margin: 0;
-      padding: 0;
+  a{
+    text-decoration: none;
+    color: white;
+  }
 
-      li{
-        padding: 8px 60px 8px 0;
+  .menu-tag{
+    display: block;
 
-        a{
-        font-size: 0.85rem;
-        color: white;
-        }
-      }
+    li{
+     border-top: 1px solid white;
+     padding: 24px 0;
+     font-size: 0.85rem;
+
+     &:nth-child(3){
+      border-bottom: 1px solid white;
+     }
+    }
+  }
+
+  .sns{
+    display: block;
+    margin-top: 64px;
+    
+    li{
+      margin-top: 16px;
     }
   }
 }
+
+#nav.active{
+  opacity: 1;
+  display: block;
+}
+
+#mask.active{
+  opacity: 1;
+  display: block;
+  pointer-events: auto;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  pointer-events: auto;
+}
+
+h1{
+  margin: 0;
+}
+
+#menu{
+  display: block;
+  position: fixed;
+  top: 25px;
+  right: 45px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 9999;
+}
+
+
+span{
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background: black;
+}
+
+span:nth-child(1){
+  top: 4px;
+}
+
+
+
+#menu.active span:nth-child(1){
+  animation: rotateopen1 0.5s ease forwards;
+}
+
+@keyframes rotateopen1{
+  0%{
+    transform: translateY(0px) rotate(0deg);
+    background: #000;
+  }
+
+  100%{
+    transform: translateY(10px) rotate(315deg);
+    background: #fff;
+  }
+}
+
+span:nth-child(2){
+  top: 14px;
+}
+
+#menu.active span:nth-child(2){
+  animation: fadeout 0.5s ease forwards;
+}
+
+@keyframes fadeout{
+  0%{
+    opacity: 1;
+  }
+
+  80%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 0;
+  }
+}
+
+
+span:nth-child(3){
+  bottom: 4px;
+}
+
+#menu.active span:nth-child(3){
+  animation: rotateopen2 0.5s ease forwards;
+}
+
+@keyframes rotateopen2{
+  0%{
+    transform: translateY(0px) rotate(0deg);
+    background: black;
+  }
+
+
+  100%{
+    transform: translateY(-10px) rotate(-315deg);
+    background: white;
+  }
+}
+
 
 /* main */
 
-main{
-  margin-top: 150px;
+
+h1{
+  text-align: center;
 }
-.picup-list{
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  box-sizing: border-box;
-  margin-top: 40px;
 
+.video video{
+  object-fit: cover;
+  width: 100%;
+}
 
-  .picup{
-    width: 32%;
+ul{
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+}
 
-    img{
-      max-width: 1200px;
-      width: 100%;
-    }
+.future{
+  max-width: 1240px;
+}
 
-    h3{
-      font-size: 0.85rem;
-      letter-spacing: 2px;
-    }
+.future-content{
+  box-shadow: 0 0 10px rgba(0, 0, 0, .8);
 
-    .readmore{
-      text-align: center;
-      font-size: 0.85rem;
-
-      a{
-      color: black;
-      }
-
-    }
-
+  img{
+    width: 100%;
   }
-}
 
+  .fade-up{
+    animation: fadeup 1s ease-out forwards;
+  }
+  
+  @keyframes fadeup{
+    0%{
+      opacity: 0;
+      transform: translateY(30px);
+    }
 
+    80%{
+      opacity: 1;
+    }
 
-.content{
+    100%{
+      opacity: 1;
+      transform:translateY(0px);
+    }
+  }
 
-  font-size: 0.9rem;
-  margin-top: 64px;
-
-  &:nth-child(1){
+  p{
     margin-top: 0;
   }
 
-  a{
-    color: black;
+  h5{
+    line-height: 20px;
   }
 
-  img{
-    margin-top: 8px;
-  }
+  .text{
+    padding: 32px;
 
-  .time{
-    margin-right: 16px;
-  }
-
-  .content-text{
-    padding: 0 40px;
-    font-size: 0.85rem;
-    letter-spacing: 2px;
-    line-height: 24px;
-  }
-
-  .readmore{
-    text-align: center;
-  }
-}
-
-.name{
-
-  .name-text{
-    font-size: 0.78rem;
-    letter-spacing: 2px;
-  }
-
-  img{
-    display: block;
-    width: 128px;
-    height: 128px;
-    border-radius: 50%;
-    margin: 0 auto;
-  }
-
-  h3{
-    text-align: center;
-    margin-top: 32px;
-  }
-
-  .name-text{
-    margin-top: 32px;
-  }
-}
-
-.flex{
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-  margin: 64px auto 0;
-  
-
-  .flex-item1{
-    width: 66%;
-
-  }
-
-  .flex-item2{
-    width: 30%;
-  }
-}
-
-.ranking{
-
-  margin-top: 58px;
-
-
-  h3{
-    text-align: center;
-  }
-
-  .ranking-text{
-    margin: 0;
-    font-size: 0.78rem;
-    letter-spacing: 2px;
-  }
-
-  .ranking-1{
-    margin-top: 32px;
-  }
-  .ranking-2{
-    margin-top: 32px;
-  }
-  .ranking-3{
-    margin-top: 32px;
-  }
-}
-
-.archive{
-
-  margin-top: 58px;
-
-  h3{
-    text-align: center;
-  }
-
-  ul{
-
-    padding: 0;
-    margin-top: 32px;
-
-    li{
-      padding: 20px 0;
-      border-top: 1px solid black;
-      font-size: 0.8rem;
-
-      &:nth-child(15){
-        border-bottom: 1px solid black;
-      }
-
-      a{
-        color: black;
-        padding-left: 16px;
-      }
-    }
-
-    }
-  }
-
-
-  /* footer */
-
-  footer{
-    background: rgb(241, 239, 239);
-    margin-top: 128px;
-    padding-bottom: 8px;
-
-    a{
-      color: black;
-    }
-
-
-    .footer{
-      display: flex;
-      justify-content: space-between;
-      margin: 0 auto;
-      box-sizing: border-box;
-      padding: 32px 16px;
-      
-      .item{
-        width: 31%;
-      }
-
-      .about{
-
-        p{
-          font-size: 0.78rem;
-          letter-spacing: 2px;
-          margin-top: 32px;
-          line-height: 20px;
-        }
-        ul{
-          font-size: 0.78rem;
-          letter-spacing: 2px;
-          padding: 0;
-          margin-top: 16px;
-
-          li{
-            margin-top: 4px;
-          }
-        }
-      }
-
-      .menu{
-
-        ul{
-          padding: 0;
-          font-size: 0.8rem;
-          margin-top: 32px;
-
-          li{
-            padding: 16px 0;
-            border-top: 1px solid black;
-
-            &:nth-child(5){
-              border-bottom: 1px solid black;
-            }
-
-              a{
-                padding-left: 16px;
-              }
-            
-          }
-        }
-      }
-
-      .twitter{
-        font-size: 0.85rem;
-        
-        p{
-          margin-top: 32px;
-        }
-      }
-    }
-
-    .small{
-      font-size: 0.8rem;
-      text-align: center;
-    }
-  }
-
-    @media(max-width: 767px){
-
-    .picup-list{
-      flex-direction: column;
-
-      .picup{
-        width: 100%;
-        margin-top: 32px;
-      }
-    }
-
-        .flex{
-      flex-direction: column;
-
-      .flex-item1{
-        width: 100%;
-      }
-
-      .flex-item2{
-        width: 100%;
-      }
-    }
-
-    .name{
-      margin-top: 32px;
-    }
-
-    .footer{
-
-      flex-direction: column;
-    }
-    
-    footer .footer .item{
+    time{
+      display: inline-block;
       width: 100%;
+      text-align: right;
     }
-
-    .twitter{
-      margin-bottom: 32px;
-    }
-
   }
+}
+
+footer{
+  background: black;
+  color: white;
+  padding: 64px 16px 10px;
+
+
+
+  .contact{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    .contact-text{
+      width: 45%;
+    }
+  }
+
+  h1{
+    color: white;
+  }
+
+  .form{
+    width: 45%;
+
+    dl{
+
+      dd{
+        margin: 0;
+        padding: 0;
+
+        input{
+          width: 100%;
+          height: 40px;
+        }
+
+        textarea{
+          width: 100%;
+          height: 70px;
+        }
+      }
+    }
+
+    button{
+      border: 1px solid white;
+      color: white;
+      background: black;
+      width: 200px;
+      height: 50px;
+    }
+  }
+
+  .small{
+    text-align: center;
+  }
+}
+
+
+#pick-up{
+  padding: 100px 0;
+}
