--- a/style.css
+++ b/style.css
@@ -72,16 +72,33 @@ img{
   }
 }
 
+
+
 #nav.active{
-  opacity: 1;
   display: block;
+  animation: fadein 0.5s ease forwards;
 }
+
+@keyframes fadein{
+  0%{
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+
+  80%{
+    opacity: 1;
+  }
+
+  100%{
+    transform: translateX(0px);
+    opacity: 1
+}};
+
 
 #mask.active{
   opacity: 1;
   display: block;
-  pointer-events: auto;
-  z-index: 10;
+  z-index: 20;
   background: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100vh;
